--- a/packages/extension/src/popup/index.html
+++ b/packages/extension/src/popup/index.html
@@ -7,7 +7,7 @@
     <title>Vite + Preact + TS</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="popup"></div>
     <script type="module" src="./main.tsx"></script>
   </body>
 </html>
