--- a/packages/extension/src/sandbox/sandbox.html
+++ b/packages/extension/src/sandbox/sandbox.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Preact + TS</title>
   </head>
-  <body>
-    <div id="popup"></div>
+  <body class="font-sans text-base">
+    <div id="app"></div>
     <script type="module" src="./main.tsx"></script>
-    <iframe width="0px" height="0px" src="../sandbox/sandbox.html"></iframe>
   </body>
 </html>
