Setup keyrings for sandbox environment

--- a/packages/extension/src/sandbox/sandbox.html
+++ b/packages/extension/src/sandbox/sandbox.html
@@ -7,7 +7,7 @@
     <title>Vite + Preact + TS</title>
   </head>
   <body class="font-sans text-base">
-    <div id="app"></div>
-    <script type="module" src="./main.tsx"></script>
+    <div id="sandbox"></div>
+    <script type="module" src="./sandbox.tsx"></script>
   </body>
 </html>
